[tool.poetry]
name = "interactiverebase"
version = "0.1.0"
description = ""
authors = ["Ben Lambell <blambell@plxs.com.au>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
